<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/MainText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1_ground"
                android:textColor="@color/black"
                android:layout_marginStart="20sp"
                android:textSize="22sp">
            </TextView>
            <TextView
                android:id="@+id/subText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MainText1"
                android:textColor="@color/black"
                android:text="@string/player1_secret_sequence"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/editText1"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subText1"
                android:textColor="@color/black"
                android:layout_marginStart="50sp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:textColor="@color/black"
                android:layout_marginStart="15sp"
                android:textSize="18sp"
                android:text="@string/guess_and_responses"/>
            <ScrollView
                android:id = "@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="90sp"
                >
                <LinearLayout
                    android:id="@+id/player1GuessContainer"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </ScrollView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/MainText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/player2_ground"
                android:layout_marginStart="20sp"
                android:textSize="22sp">
            </TextView>
            <TextView
                android:id="@+id/subText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MainText2"
                android:textColor="@color/black"
                android:text="@string/player2_secret_sequence"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subText2"
                android:textColor="@color/black"
                android:layout_marginStart="50sp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_marginStart="15sp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/guess_and_responses"/>
            <ScrollView
                android:id = "@+id/scrollView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="90sp"
                >
                <LinearLayout
                    android:id="@+id/player2GuessContainer"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/dark_green"
        android:textAllCaps="true"
        android:layout_above="@+id/startGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp"
        />
    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_game"
        />

    </RelativeLayout>